# nlp-browser-app

./: .gitignore  README.md  main.py  pyproject.toml
backend/: app.py  nlp_processor.py  requirements.txt
backend/data/: dataset.csv
frontend/: index.html  script.js  style.css
